# copamind-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CopaMind_2026_MASTER_PLAN.md  DECISIONS.md  Estatísticas Da Equipe.txt  Estatísticas do jogador.txt  GUIA_LINKEDIN.md  LICENSE  MODEL_CARD.md  PROMPT_MARKETING_COPAMIND.md  README.md  ROADMAP.md  TASKS.md  _check_progress.py  estratégia de lançamento.txt  full.txt  infos.txt  llm calls.txt  lm_studio_manual_configuracoes_por_modelo.md  pyproject.toml  start_all.bat  update_llm_estatico.bat  video.txt  video_prompts.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_source.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
apps/portal/: app.js  en.js  index.html  styles.css
apps/portal/data/: copamind.json
apps/streamlit/: app.py
config/: app.example.yaml  logging.yaml  models.example.yaml  sources.example.yaml
data/: .gitkeep
data/cache/fifa/: fixtures_ef08c5ad29249f39.json
data/fifa/player_statistics/: ataque.csv  (+9 more)
data/samples/: copa2026_players.json  matches.json  teams.json  worldcup2026_copa.json
docker/: compose.yaml
docs/: app.js  architecture.html  chat_demo.html  copamind_chat_memory_2026-07-09.md  copamind_modelos_llm_locais.html  en-translations.js  en.js  index.html  styles.css
docs/assets/: README.md
docs/en/: index.html
docs/launch/: LAUNCH_KIT.md
docs/portal/: app.js  index.html  styles.css
scripts/: _check_pool.py  bootstrap_copa2026.py  bootstrap_copa2026_players.py  capture_scenes.py  download_sample_data.py  export_portal_data.py  export_static_portal.py  fetch_ea_fc26.py  fetch_fifa_player_statistics.py  fetch_fifa_team_statistics.py  generate_copa_samples.py  refresh_scores.py  run_llm_phase_benchmark.py  write_app.py
src/copamind/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: worldcup_sample.json
tests/integration/: __init__.py  test_data_api.py  test_ensemble_calibration_api.py  test_health.py  test_llm_orchestration.py  test_llm_predictor_bracket.py  test_pool.py  test_predictions.py  test_rag_api.py  test_repository.py  test_rerank_sse.py  test_simulation_api.py  test_user_reports.py  test_worldcup_connector.py
tests/unit/: __init__.py  test_bolao_llm_agent.py  test_chat_sessions.py  test_cli.py  test_config.py  test_content_cards.py  test_dashboard.py  test_dashboard_chat.py  test_elo.py  test_ensemble_calibration.py  test_export_portal_data.py  test_fifa_analytics.py  test_fifa_fixtures.py  test_fifa_statistics_refresh.py  test_form.py  test_hardware_profiles.py  test_i18n.py  test_ingestion.py  test_llm_client.py  test_llm_phase_runner.py  test_match_features.py  test_mcp_tools.py  test_poisson.py  test_pool_scoring.py  test_rag.py  test_report_extractors.py  test_schemas.py  test_simulation.py  test_tournament_bracket.py
(+170 files in other folders)
